[gd_scene load_steps=2 format=3 uid="uid://c3uo54o4oulo5"]

[ext_resource type="Script" path="res://waiting_for_connect.gd" id="1_7akkh"]

[node name="Waiting For Connect" type="CanvasLayer"]
script = ExtResource("1_7akkh")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Waiting For Connect" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Waiting for Players" type="Label" parent="PanelContainer/MarginContainer/Waiting For Connect"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Waiting for Players
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/Waiting For Connect"]
layout_mode = 2
size_flags_vertical = 3

[node name="Lobby" type="Label" parent="PanelContainer/MarginContainer/Waiting For Connect/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Current Lobby: 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LobbyID" type="Label" parent="PanelContainer/MarginContainer/Waiting For Connect/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Waiting For Connect"]
layout_mode = 2
size_flags_vertical = 3

[node name="Players" type="Label" parent="PanelContainer/MarginContainer/Waiting For Connect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Clients Joined: 
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumPlayers" type="Label" parent="PanelContainer/MarginContainer/Waiting For Connect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartRound" type="Button" parent="PanelContainer/MarginContainer/Waiting For Connect"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 30
text = "Start Game

"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/Waiting For Connect"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"BackButton"
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="button_down" from="PanelContainer/MarginContainer/Waiting For Connect/StartRound" to="." method="_on_start_round_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/Waiting For Connect/Back" to="." method="_on_back_button_down"]
